# llvm-pass-tutorial

./: .gitignore  CMakeLists.txt  README.md
Armariris/: CMakeLists.txt  CryptoUtils.cpp  Enter.cpp  Flattening.cpp  StringObfuscation.cpp  Substitution.cpp  Utils.cpp
Armariris/include/Transforms/Obfuscation/: Flattening.h  StringObfuscation.h  Substitution.h  Utils.h
Armariris/include/llvm/: CryptoUtils.h
Hikari/: AntiClassDump.cpp  BogusControlFlow.cpp  CMakeLists.txt  CryptoUtils.cpp  Enter.cpp  Flattening.cpp  FunctionCallObfuscate.cpp  FunctionWrapper.cpp  IndirectBranch.cpp  Obfuscation.cpp  SplitBasicBlocks.cpp  StringEncryption.cpp  Substitution.cpp  Utils.cpp  json.hpp
Hikari/include/Transforms/Obfuscation/: AntiClassDump.h  BogusControlFlow.h  CryptoUtils.h  Flattening.h  FunctionCallObfuscate.h  FunctionWrapper.h  IndirectBranch.h  Obfuscation.h  Split.h  StringEncryption.h  Substitution.h  Utils.h
llvm-jit/: CMakeLists.txt  HowToUseJIT.cpp  tut1  tut1.cpp
llvm-jit/HowToUseJIT.dSYM/Contents/: Info.plist
llvm-jit/tut1.dSYM/Contents/: Info.plist
llvm-jit/tut1.dSYM/Contents/Resources/DWARF/: tut1
ndk-ollvm-test/: CMakeLists.txt  testollvm.cpp
ollvm/: BogusControlFlow.cpp  CMakeLists.txt  CryptoUtils.cpp  Enter.cpp  Flattening.cpp  SplitBasicBlocks.cpp  Substitution.cpp  Utils.cpp
ollvm/include/Transforms/Obfuscation/: BogusControlFlow.h  Flattening.h  Split.h  Substitution.h
ollvm/include/llvm/: CryptoUtils.h
skeleton/: CMakeLists.txt  Skeleton.cpp  SkeletonModule.cpp  main.cpp
